--- a/back-api-usuario/api-cadastro-usuario-desafiofirst/pom.xml
+++ b/back-api-usuario/api-cadastro-usuario-desafiofirst/pom.xml
@@ -71,6 +71,11 @@
     <artifactId>junit-jupiter-engine</artifactId>
     <scope>test</scope>
 </dependency>
+<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-core</artifactId>
+</dependency>
+
 	</dependencies>
 
 	<build>
