Alteração para utilização de Token JWT

--- a/back-api-usuario/api-cadastro-usuario-desafiofirst/src/main/resources/application.properties
+++ b/back-api-usuario/api-cadastro-usuario-desafiofirst/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.error.include-stacktrace=never
 #export JWT_secret= "" 
 #printenv JWT_secret
 #api.security.token.secret=${JWT_secret: 12345678}
-#api.security.token.secret=${JWT_secret:123456}
+api.security.token.secret=${JWT_secret:123456}
 
 #colocar em portugues
 #spring.data.web.pageable.page-parameter=pagina
